# IA-Data-Analysis

./: .gitignore  pyproject.toml
src/: main.py  pandasai_ollama.ipynb
