[project]
name = "pd-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "pandas>=2.2.3",
    "pandasai>=2.0.24",
    "streamlit>=1.41.1",
]
